recursion.logo.lessons.recursion.logo.koch.PentaKoch.scala.error
PentaKoch:5: error: not found: value lengt
    pentaKoch(levels-1, lengt*0.4)
                        ^